Add README for app alerts and update .env.example files with comments for clarity

--- a/docker/app-alerts-review/.env.example
+++ b/docker/app-alerts-review/.env.example
@@ -17,17 +17,17 @@ REDIS_HOST= redis
 REDIS_PORT= 6379
 
 # App
-APP_BUILD_DIR=\\wsl.localhost\Alpine\home\TecnoExplora\app
+APP_BUILD_DIR=\\wsl.localhost\Alpine\home\TecnoExplora\app # Directorio frontend
 
 # Local files location
-IMAGE_BASE_DIR=/home/TecnoExplora/Almacenamiento
-SCRIPT_DIR=/home/TecnoExplora/scripts_walmart
-HOME_DIR=/home/TecnoExplora
+IMAGE_BASE_DIR=/home/TecnoExplora/Almacenamiento # Directorio de almacenamiento
+SCRIPT_DIR=/home/TecnoExplora/scripts_walmart # Directorio de scripts (opcional)
+HOME_DIR=/home/TecnoExplora # Directorio principal (opcional)
 
 # JWT configuration
-JWT_KEY=123
+JWT_KEY=   # Clave secreta para la firma de JWT
 # Camera configuration
-SECRET_KEY=123
+SECRET_KEY=   # Clave secreta para la firma de camaras
 
 CAMERA_ADD_URL=
 CAMERA_UPDATE_URL=
@@ -35,4 +35,4 @@ CAMERA_DELETE_URL=
 
 # 
 STORE= "000"
-WEB_ALERTS= http://web:8080
+WEB_ALERTS= ""  # URL del servicio de alertas web principal
